# garbage-code

./: README.md
PAT/: .gitignore
PAT/PAT_A/: A1005.cpp  A1008.cpp  A1011.cpp  A1013.cpp  A1016.cpp  A1023.cpp  A1024.cpp  A1028.cpp  A1031.cpp  A1034.cpp  A1045.cpp  A1049.cpp  A1052.cpp  A1054.cpp  A1055.cpp  A1058.cpp  A1061.cpp  A1062.cpp  A1063.cpp  A1064.cpp  A1065.cpp  A1073.cpp  A1085.cpp  A1089.cpp  A1092.cpp  A1095.cpp  A1100.cpp  A1104.cpp  A1107.cpp  A1109.cpp  A1110.cpp  A1113.cpp  A1115.cpp  A1122.cpp  A1123.cpp  A1129.cpp  A1136.cpp  A1139.cpp  A1141.cpp  A1149.cpp  (+1 more)
PAT/PAT_B/: B1001.cpp  B1002.cpp  B1005.cpp  B1013.cpp  B1033.cpp  B1035.cpp  B1045.cpp  B1046.cpp  B1049.cpp  B1055.cpp  B1059.cpp  B1060.cpp  B1064.cpp  B1065.cpp  B1069.cpp  B1071.cpp  B1074.cpp  B1075.cpp  B1077.cpp  B1090.cpp  B1091.cpp
c/base64/: README.md  base64.c  base64.h
c/matrix/: README.md  matrix.c  matrix.h
cpp/PAT/: README.md  create_README.py
dockerfile/: README.md
dockerfile/hexo-webhook/: Dockerfile  README.md  docker-compose.yaml
dockerfile/lychee/: Dockerfile  README.md  docker-compose.yaml
dockerfile/ubuntu-xfce-novnc/: Dockerfile  README.md  docker-compose.yaml
go/: webhook.go
go/leetcode/: README.md
python/city58/: .gitignore  README.md
python/remove-comments/: README.md  remove_comments.py
python/weibo-spider/: README.md  weibo_spider.py
rust/geektime/: Cargo.toml
rust/geektime/httpie/: Cargo.toml
rust/geektime/httpie/src/: main.rs
rust/learning/: Cargo.toml
rust/leetcode/: README.md  creat_README.py
shell/: linux_012_oslab.sh
(+284 files in other folders)
